v1.x.x.x - Unreleased
======================
 NEW	: Subtitle delay support (this one does not modify the subtitle file)
 NEW    : Polish, Ukrainian & Italian translations
 NEW    : Support for M2TS files with H264, VC1, AC3, DTS, LPCM
 CHANGED: Size shrink for translation Dll
 CHANGED: New property page for "MPC - Video decoder" standalone filter to select activated codecs
 CHANGED: Option added in "MPC Video Decoder" property page to disable ffmpeg software decoding (to use other decoder instead)
 CHANGED: Added file extensions Evo, M2ts and m4a in option / format
 CHANGED: Force using 3D surface with EVR custom
 FIXED  : Sorenson video was not played when DXVA was activated on internal filter
 FIXED  : Minimum EVR buffer set to 3 (instead of 1)
 FIXED  : Better subtitle synchronization with EVR custom (delay due to buffering remove)
 FIXED  : DXVA compatibility improved with some nVidia cards
 FIXED  : Report subtitle fixes from Guliverkli2
 FIXED  : Incorrect colors with DXVA internal decoder for H264 files with multiple PPS / SPS settings
 FIXED  : Broken FLV playback
 FIXED  : EVR custom presenter incompatibility with Microsoft Mpeg2 & Cyberlink decoder
 FIXED  : DXVA decoding bugs for some H264 files
 FIXED  : Prevent crash opening Real Media files containing invalid characters
 FIXED  : Memory leak in DXVA decoder (bug #1962448)
 FIXED  : Crash on stop/play with DXVA decoder
 FIXED  : Random crash with EVR custom

v1.1.0.0 - 6.March 2008
======================
 NEW	: Custom presenter now support DXVA2, and display hardware acceleration mode in Jitter test information.
 NEW    : Internal video decoder based on ffmpeg for Flash video (FLV4, VP5,VP6), AMV, Mpeg4, SQV, Theora, VC1, XVID, and DivX
 NEW    : Internal video decoder H264 with DXVA 1 acceleration (using VMR9 or overlay on XP) and DXVA2 (using EVR on Vista).
 NEW    : Korean translation
 CHANGED: FAAD library updated to 2.6
 CHANGED: Standalone filter renamed to be prefixed by "MPC - xxx"