@@ -3,7 +3,8 @@ v1.x.x.x - Unreleased
  NEW	: Subtitle delay support (this one does not modify the subtitle file)
  NEW    : Polish, Ukrainian & Italian translations
  NEW    : Support for M2TS files with H264, VC1, AC3, DTS, LPCM
- CHANGED: Size shrink for translation Dll
+ CHANGED: Improved support for audio and subtitle switching with internal Mpeg splitter.
+ CHANGED: Size shrink for translation DLLs
  CHANGED: New property page for "MPC - Video decoder" standalone filter to select activated codecs
  CHANGED: Option added in "MPC Video Decoder" property page to disable ffmpeg software decoding (to use other decoder instead)
  CHANGED: Added file extensions Evo, M2ts and m4a in option / format
@@ -21,6 +22,7 @@ v1.x.x.x - Unreleased
  FIXED  : Memory leak in DXVA decoder (bug #1962448)
  FIXED  : Crash on stop/play with DXVA decoder
  FIXED  : Random crash with EVR custom
+ FIXED  : Macroblocks with nVidia card (appear on H264 streams with custom quantitization matrix) 
 
 v1.1.0.0 - 6.March 2008
 ======================
